# fast-dedupe

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.sh  codecov.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: benchmark.py
docs/: getting_started.md
examples/: basic_usage.py  benchmark.py  cli_example.sh  deduplicated.txt  duplicates.json  sample_data.txt  similarity_comparison.py
fastdedupe/: __init__.py  __main__.py  cli.py  core.py  similarity.py
fastdedupe/tests/: __init__.py  test_cli.py  test_core.py  test_main.py  test_similarity.py
