[project]
name = "fast-dedupe"
version = "0.1.0"
description = "A minimalist but optimized Python package for deduplication tasks leveraging RapidFuzz internally, enabling super-fast approximate duplicate detection within a dataset with minimal config."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "jellyfish>=1.0.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "pandas>=2.2.3",
    "rapidfuzz>=2.0.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["fastdedupe/tests"]
python_files = ["test_*.py"]
addopts = ["--cov=fastdedupe", "--cov-report=xml", "--cov-report=term-missing"]

[tool.flake8]
exclude = [
    ".venv",
    "build",
    "dist",
    ".git",
    "__pycache__",
    "fast_dedupe.egg-info",
]
max-line-length = 88
extend-ignore = ["E203"] # Ignore whitespace before ':' which conflicts with black
